<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>


    <string name="editTextView_name">Name</string>
    <string name="optionsTextView_name">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>

    <string name="quantity">Quantity</string>
    <string name="order">Order</string>

    <string name="order_summary_name">Name: <xliff:g example="John" id="customerName">%s</xliff:g></string>
    <string name="order_summary_whippedCream">Add whipped cream?</string>
    <string name="order_summary_chocolate">Add chocolate?</string>


    <string name="thank_you">Thank you!</string>

</resources>
